# stellar-rpc

./: .dockerignore  .gitignore  .golangci.yml  BENCHMARK_GOAL.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SESSION_LEARNINGS.md  go.mod  go.sum  rpc-config-backfill-pubnet-testing.toml
.github/actions/setup-go/: action.yml
.github/release-evaluation/: thresholds.json
.github/workflows/: backfill-test.yml  codeql.yml  dependency-check.yml  e2e.yml  ec2-leg.yml  full-history.yml  golang.yml  integration-tests.yml  load-test-coordinator.yml  load-test.yml  release-evaluation.yml  rust.yml  socket-scan.yml  stellar-rpc.yml  update-protocol-next-deps.yml  update-soroban-env.yml
bench-out/: filter-15terms-5999-requests-meta.json  filter-15terms-5999-requests.jsonl  filter-15terms-5999-v1.json  ledger-range-concurrency-sweep.csv  summary.csv
bench-out/post-merge/: ledger-range-concurrency-sweep.csv
bench-out/rep2/: ledger-range-concurrency-sweep.csv
bench-out/rep3/: ledger-range-concurrency-sweep.csv
client/: main.go
cmd/stellar-rpc/: README.md  main.go  main_test.go
cmd/stellar-rpc/docker/: Dockerfile  Dockerfile.release  Dockerfile.rpcv2  Makefile
cmd/stellar-rpc/internal/: jsonrpc.go
cmd/stellar-rpc/internal/config/: flags.go  (+10 more)
cmd/stellar-rpc/lib/: preflight.h
cmd/stellar-rpc/rpcv1/: main.go
cmd/stellar-rpc/rpcv2/: main.go  rpc-v2-sample-config.toml  sample_config_test.go
deploy/devbox/: RUNBOOK.md  captive-core-pubnet.cfg  full-history.toml  smoke.sh
design-docs/: full-history-design-explorer.html  full-history-implementation-issues.md  full-history-implementation-status.md  full-history-streaming-workflow.md  getevents-full-history-design.md  gettransaction-full-history-design.md  packfile-library.md  query-routing-design.md
docs/: getevents-full-history-design.md
docs/plans/: 2026-07-15-fullhistory-query-poc-HANDOFF.md  2026-07-15-fullhistory-query-poc.md
docs/superpowers/plans/: 2026-06-05-fullhistory-ingest-core.md  2026-07-15-fullhistory-query-poc-HANDOFF.md  2026-07-15-fullhistory-query-poc.md
docs/superpowers/specs/: 2026-06-05-fullhistory-ingest-core-design.md
full-history/: CLAUDE.md  Makefile  design-doc-revamp-plan.md  getEvents-full-history-design.md  original-getEvents.md
full-history/all-code/: CLAUDE.md  Makefile
full-history/all-code/.skills/: architecture.md  build-and-test.md  code-patterns.md  helpers-ref.md  metrics-and-logging.md  pkg-ref.md
full-history/all-code/backfill-workflow/: README.md  REFACTOR-PLAN-08d-index-first.md  backfill-config.toml  bin_reader.go  bin_reader_test.go  bsb_factory.go  bsb_instance.go  bsb_instance_test.go  cf.go  cf_test.go  chunk_writer.go  chunk_writer_test.go  config.go  config_test.go  dag.go  dag_test.go  events_writer.go  events_writer_test.go  interfaces.go  lfs_source.go  lfs_writer.go  lfs_writer_test.go  logger.go  logger_test.go  main.go  memory.go  memory_test.go  meta_store.go  meta_store_test.go  orchestrator.go  orchestrator_test.go  paths.go  paths_test.go  pipeline.go  pipeline_test.go  range_worker.go  range_worker_test.go  reconciler.go  reconciler_test.go  recsplit_builder.go  (+16 more)
full-history/all-code/helpers/: geometry.go  helpers.go  range.go  range_test.go  test_fixtures.go
full-history/all-code/txhash-ingestion-workflow/: main.go  meta_store.go  parallel_ingest.go  query_handler.go
full-history/backfill/: README.md  backfill-config.toml  bin_reader.go  bin_reader_test.go  bsb_factory.go  chunk_writer.go  chunk_writer_test.go  config.go  dag.go  lfs_source.go  lfs_writer.go  lfs_writer_test.go  main.go  meta_store.go  paths.go  paths_test.go  pipeline.go  pipeline_test.go  recsplit_flow.go  recsplit_flow_test.go  stats.go  stats_test.go  streamhash_benchmark_test.go  streamhash_flow.go  streamhash_flow_test.go  tasks.go  tasks_test.go  tx_extractor_test.go  txhash_writer.go
full-history/backfill/cmd/: main.go
full-history/design-docs/: 01-architecture-overview.md  01-backfill-workflow.md  02-meta-store-design.md  02-streaming-workflow.md  03-backfill-workflow.md  04-streaming-and-transition.md  04-streaming-workflow.md  05-backfill-transition-workflow.md  06-streaming-transition-workflow.md  07-crash-recovery.md  08-query-routing.md  09-directory-structure.md  10-configuration.md  11-checkpointing-and-transitions.md  12-metrics-and-sizing.md  13-recommended-operator-approach.md  14-open-questions.md  15-query-performance.md  16-backfill-run-metrics.md  FAQ.md  README.md
full-history/design-docs-og/: 01-architecture-overview.md  11-checkpointing-and-transitions.md  13-recommended-operator-approach.md  16-backfill-run-metrics.md  README.md
full-history/design-docs-og/plans/: 2026-03-20-consolidate-backfill-doc.md
full-history/design-docs-temp/: 03-backfill-workflow.md  README.md
full-history/pkg/fsutil/: fsutil.go
full-history/pkg/geometry/: geometry_test.go
full-history/pkg/lfs/: iterator.go
full-history/pkg/logging/: logging.go
full-history/pkg/memory/: memory.go  memory_test.go
full-history/pkg/stats/: stats.go  stats_test.go
full-history/pkg/testutil/: testutil.go
plan/772-v2-service/: 00-DECISIONS.md  01-STAGES.md  CHECKPOINT.md  stage-1-ingestion-metrics.md  stage-2-registry.md  stage-3-write-integration.md  stage-4-ledger-tx-adapters.md  stage-5-events-adapter.md  stage-6-service-assembly.md  stage-7-devbox-config.md
protocol/: cursor.go  cursor_test.go  get_events.go  get_events_test.go  get_latest_ledger.go  get_ledger_entries.go  get_ledgers.go  get_network.go  get_transactions.go  simulate_transaction.go  simulate_transaction_test.go
scripts/: check-dependencies.bash  install-rocksdb.sh  install-zstd.sh  update-soroban-env.sh
scripts/bench-devbox/: bootstrap.sh  campaign.sh  example-campaign.cfg  publish.sh
tools/bench-suite/: README.md  run-e2e-latency-suite.sh  run-ingest-suite.sh  run-query-suite.sh
tools/bench-suite/results/: fullhistory-query-latency-combined-2026-07-16.html  fullhistory-query-latency-combined-2026-07-16.md
tools/fhbench/: README.md  main.go  main_test.go
wasms/: test_events.wasm
(+1070 files in other folders)
