[workspace]
resolver = "2"
members = ["cmd/stellar-rpc/lib/preflight", "cmd/stellar-rpc/lib/ffi", "cmd/stellar-rpc/lib/xdr2json"]

[workspace.package]
rust-version = "1.79.0"

[workspace.dependencies]
base64 = "0.22.0"
sha2 = "0.10.7"
libc = "0.2.147"
anyhow = "1.0.75"
serde_json = "1.0"

[workspace.dependencies.soroban-env-host-prev]
package = "soroban-env-host"
version = "=27.0.0"

# Shift the window: `-prev` is now the released P27 host (crates.io 27.0.0),
# and `-curr` is the next-protocol-aware host pulled from upstream main with
# `next` enabled, declaring P28. Using a git rev (instead of crates.io
# 27.0.0 + `next`) lets cargo treat -prev and -curr as separate compilation
# units — otherwise it refuses two aliases to the same crate+version.
# Bump the rev as rs-soroban-env evolves on its protocol-next track.
[workspace.dependencies.soroban-env-host-curr]
package = "soroban-env-host"
git = "https://github.com/sisuresh/rs-soroban-env"
rev = "448016acbf9790d9d43ba6deb5b306121177b10b"
# `next` now pulls in CAP-0084: rs-soroban-env#1696 gates the CAP on the umbrella
# `next` (which enables stellar-xdr/cap_0084_muxed_contract), so the host's
# SCAddress match handles the new MUXED_CONTRACT arm.
features = ["next"]

[workspace.dependencies.soroban-simulation-prev]
package = "soroban-simulation"
version = "=27.0.0"

[workspace.dependencies.soroban-simulation-curr]
package = "soroban-simulation"
git = "https://github.com/sisuresh/rs-soroban-env"
rev = "448016acbf9790d9d43ba6deb5b306121177b10b"
features = ["unstable-next-api"]

[workspace.dependencies.stellar-xdr]
# SPIKE: rs-stellar-xdr#549 (CAP-0084) — fork branch sisuresh/rs-stellar-xdr@p28-cap-0084.
# MUST match the git source+rev that rs-soroban-env#1696 uses, so cargo unifies
# the preflight's stellar-xdr with the host's into one package.
# Productionize -> stellar/rs-stellar-xdr merged SHA (or crates.io =27.x) once #549 lands.
git = "https://github.com/sisuresh/rs-stellar-xdr"
# Held at the rev rs-soroban-env#1696's head (448016ac) pins so cargo unifies
# preflight's stellar-xdr with the host's. #549's tip (4761390051) is 1 commit
# ahead, but that commit only regenerates JSON schemas (no Rust change), so
# holding here loses nothing; bump both together once env re-pins to it.
rev = "8f826caa99f3b4c55e4d958eb5b6a9a1dbbf9873"
# `type_enum` provides the `Type`/`TypeVariant` reflection enums used by
# xdr2json. It was enabled by default in stellar-xdr v26 but is opt-in in v27.
# `cap_0083` gates the Protocol 28 EmptyTxSet StellarValueType variant.
# `cap_0084_muxed_contract` gates the Protocol 28 muxed contract addresses
# (SC_ADDRESS_TYPE_MUXED_CONTRACT / struct MuxedContract / SCAddress arm).
features = ["serde", "type_enum", "cap_0083", "cap_0084_muxed_contract"]

[workspace.dependencies.rand]
version = "0.8.5"
features = []

[profile.release-with-panic-unwind]
inherits = "release"
panic = "unwind"
